--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - UPLOAD_FOLDER=uploads
       - SECRET_KEY=${SECRET_KEY:-default-secret-change-in-production}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - GEMINI_API_KEY=${GEMINI_API_KEY:-}
       - HOST=0.0.0.0
       - PORT=5010
     networks:
